@@ -1,3 +1,7 @@
+2004-06-30  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* src/util.hpp: Remove reflect function, since Sh now has a real one.
+
 2004-06-28  Bryan Chan <b8chan@uwaterloo.ca>
   * src/shaders/LCDSmall.?pp, src/ShrikeCanvas.?pp:
   Crammed the FPS counter under ATI limits. (issue121)
